--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,61 @@
     <section class="main-section">
       <div class="container">
 
+        <div class="main-section__header">
+          <a href="#" class="header__logo">
+            <img src="icons/Logo.svg" alt="Logo">
+          </a>
+        </div>
+
+        <div class="main-section__content content">
+          <div class="content__image">
+            <img src="img/Picture.png" alt="portret">
+          </div>
+          <div class="content__cards cards">
+            <ul class="cards__list flex">
+              <li class="cards__items flex">
+                <a href="#">
+                  <div class="cards__description">
+                    <p class="cards__text">
+                      CV
+                    </p>
+                  </div>
+                </a>
+              </li>
+
+              <li class="cards__items flex">
+                <a href="#">
+                  <div class="cards__description">
+                    <p class="cards__text">
+                      Web Pages
+                    </p>
+                  </div>
+                </a>
+              </li>
+
+              <li class="cards__items flex">
+                <a href="#">
+                  <div class="cards__description">
+                    <p class="cards__text">
+                      Design <br>Solutions
+                    </p>
+                  </div>
+                </a>
+              </li>
+
+              <li class="cards__items flex">
+                <a href="#">
+                  <div class="cards__description">
+                    <p class="cards__text">
+                      Blog
+                    </p>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
+          
+        </div>
       </div>
     </section>
   </main>
