--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   <title>Personal page Luba Sh</title>
   <meta name="description" content="Landing page for personal brand">
 </head>
@@ -26,8 +30,8 @@
           </div>
           <div class="content__cards cards">
             <ul class="cards__list flex">
-              <li class="cards__items flex">
-                <a href="#">
+              <li class="cards__items">
+                <a class="cards__link flex" href="#">
                   <div class="cards__description">
                     <p class="cards__text">
                       CV
@@ -36,8 +40,8 @@
                 </a>
               </li>
 
-              <li class="cards__items flex">
-                <a href="#">
+              <li class="cards__items">
+                <a class="cards__link flex" href="#">
                   <div class="cards__description">
                     <p class="cards__text">
                       Web Pages
@@ -46,8 +50,8 @@
                 </a>
               </li>
 
-              <li class="cards__items flex">
-                <a href="#">
+              <li class="cards__items">
+                <a class="cards__link flex" href="#">
                   <div class="cards__description">
                     <p class="cards__text">
                       Design <br>Solutions
@@ -56,8 +60,8 @@
                 </a>
               </li>
 
-              <li class="cards__items flex">
-                <a href="#">
+              <li class="cards__items">
+                <a class="cards__link flex" href="#">
                   <div class="cards__description">
                     <p class="cards__text">
                       Blog
@@ -67,7 +71,31 @@
               </li>
             </ul>
           </div>
-          
+
+        </div>
+
+        <div class="contact-section">
+          <h1 class="contact-section__title">Let’s Talk with Me!</h1>
+          <div class="contact-section__socials socials flex">
+            <a href="#" class="socials__icon">
+              <img src="icons/IN icon.svg" alt="">
+            </a>
+            <a href="#" class="socials__icon">
+              <img src="icons/Skype icon.svg" alt="">
+            </a>
+            <a href="#" class="socials__icon">
+              <img src="icons/Viber icon.svg" alt="">
+            </a>
+            <a href="#" class="socials__icon">
+              <img src="icons/Telegram icon.svg" alt="">
+            </a>
+            <a href="#" class="socials__icon">
+              <img src="icons/wHATSUP ICON.svg" alt="">
+            </a>
+            <a href="#" class="socials__icon">
+              <img src="icons/vk icon.svg" alt="">
+            </a>
+          </div>
         </div>
       </div>
     </section>
