--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
               </li>
 
               <li class="cards__items">
-                <a class="cards__link flex" href="#">
+                <a class="cards__link flex" href="pages.html">
                   <div class="cards__description">
                     <p class="cards__text">
                       Web Pages
@@ -77,22 +77,22 @@
         <div class="contact-section">
           <h1 class="contact-section__title">Let’s Talk with Me!</h1>
           <div class="contact-section__socials socials flex">
-            <a href="#" class="socials__icon">
+            <a href="https://www.linkedin.com/in/luba-scherbovich-55aa2b227/" class="socials__icon" target="_blank">
               <img src="icons/IN icon.svg" alt="">
             </a>
-            <a href="#" class="socials__icon">
+            <a href="https://join.skype.com/invite/LzDObv79pLoS" class="socials__icon" target="_blank">
               <img src="icons/Skype icon.svg" alt="">
             </a>
-            <a href="#" class="socials__icon">
+            <a href="viber://chat?number=%2B375293089207" class="socials__icon" target="_blank">
               <img src="icons/Viber icon.svg" alt="">
             </a>
-            <a href="#" class="socials__icon">
+            <a href="https://t.me/Liubou_Scherbovich" class="socials__icon" target="_blank">
               <img src="icons/Telegram icon.svg" alt="">
             </a>
-            <a href="#" class="socials__icon">
-              <img src="icons/wHATSUP ICON.svg" alt="">
+            <a href="https://www.instagram.com/liubou_s/" class="socials__icon" target="_blank">
+              <img src="icons/inst icon.svg" alt="">
             </a>
-            <a href="#" class="socials__icon">
+            <a href="https://vk.com/id5243337" class="socials__icon" target="_blank">
               <img src="icons/vk icon.svg" alt="">
             </a>
           </div>
